# conan-workspace-playground

./: .gitignore  CMakeLists.txt  README.md  layout.ini  workspace.yml
app/: CMakeLists.txt  conanfile.py
app/src/: app.cpp
liba/: CMakeLists.txt  conanbuildinfo.cmake  conanfile.py  graph_info.json
liba/include/: liba.h
liba/src/: liba.cpp
liba/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
libb/: CMakeLists.txt  conanfile.py
libb/include/: libb.h
libb/src/: libb.cpp
libb/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
libb/tests/: CMakeLists.txt  libb_test.cpp
